--- a/vscode/settings/settings.json
+++ b/vscode/settings/settings.json
@@ -31,8 +31,11 @@
   "go.formatTool": "goimports",
   "go.useLanguageServer": true,
   "nightswitch.autoSwitch": true,
-  "nightswitch.location": "34.052235, -118.243683",
-  "nightswitch.themeDay": "Material Theme Lighter",
+  "nightswitch.sunset": "18:00",
+  "jest.autoEnable": false,
+  "nightswitch.sunrise": "07:00",
+  // "nightswitch.location": "34.052235, -118.243683",
+  "nightswitch.themeDay": "Solarized Light",
   "nightswitch.themeNight": "Community Material Theme Palenight High Contrast",
   "nixfmt.path": "/Users/marcomunizaga/.nix-profile/bin/nixfmt",
   "rust.clippy_preference": "on",
@@ -79,6 +82,7 @@
   "vsonline.authentication.accountProvider": "Microsoft",
   "window.zoomLevel": 1,
   "workbench.activityBar.visible": true,
-  "workbench.colorTheme": "Material Theme Lighter",
-  "workbench.statusBar.visible": true
+  "workbench.colorTheme": "Solarized Light",
+  "workbench.statusBar.visible": true,
+  "vsonline.accountProvider": "Microsoft"
 }
