--- a/vscode/settings/settings.json
+++ b/vscode/settings/settings.json
@@ -82,8 +82,10 @@
   "vsonline.authentication.accountProvider": "Microsoft",
   "window.zoomLevel": 1,
   "workbench.activityBar.visible": true,
-  "workbench.colorTheme": "Solarized Light",
+  "workbench.colorTheme": "Community Material Theme Palenight High Contrast",
   "workbench.statusBar.visible": true,
   "vsonline.accountProvider": "Microsoft",
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "python.dataScience.askForKernelRestart": false,
+  "codespaces.accountProvider": "Microsoft"
 }
