--- a/vscode/settings/settings.json
+++ b/vscode/settings/settings.json
@@ -37,7 +37,7 @@
   // "nightswitch.location": "34.052235, -118.243683",
   "nightswitch.themeDay": "Solarized Light",
   "nightswitch.themeNight": "Community Material Theme Palenight High Contrast",
-  "nixfmt.path": "/Users/marcomunizaga/.nix-profile/bin/nixfmt",
+  "nixfmt.path": "$HOME/.nix-profile/bin/nixfmt",
   "rust.clippy_preference": "on",
   "terminal.integrated.shell.osx": "/bin/zsh",
   "vim.normalModeKeyBindingsNonRecursive": [
