Add vscode remote extension

--- a/vscode/settings/settings.json
+++ b/vscode/settings/settings.json
@@ -29,12 +29,12 @@
   "go.formatTool": "goimports",
   "go.useLanguageServer": true,
   "nightswitch.autoSwitch": true,
-  "nightswitch.sunset": "18:00",
+  "nightswitch.sunset": "17:00",
   "jest.autoEnable": false,
   "nightswitch.sunrise": "07:00",
   // "nightswitch.location": "34.052235, -118.243683",
-  "nightswitch.themeDay": "Solarized Light",
-  "nightswitch.themeNight": "Community Material Theme Palenight High Contrast",
+  "nightswitch.dayTheme": "Solarized Light",
+  "nightswitch.nightTheme": "Community Material Theme Palenight High Contrast",
   "nixfmt.path": "$HOME/.nix-profile/bin/nixfmt",
   "rust.clippy_preference": "on",
   "terminal.integrated.shell.osx": "/bin/zsh",
@@ -68,12 +68,12 @@
   "vsonline.authentication.accountProvider": "Microsoft",
   "window.zoomLevel": 0,
   "workbench.activityBar.visible": true,
-  "workbench.colorTheme": "Community Material Theme Palenight High Contrast",
+  "workbench.colorTheme": "Solarized Light",
   "workbench.statusBar.visible": true,
   "vsonline.accountProvider": "Microsoft",
   "cmake.configureOnOpen": false,
   "python.dataScience.askForKernelRestart": false,
-  "codespaces.accountProvider": "Microsoft",
+  "codespaces.accountProvider": "GitHub",
   "[rust]": {
     "editor.defaultFormatter": "matklad.rust-analyzer"
   },
