--- a/vscode/settings/settings.json
+++ b/vscode/settings/settings.json
@@ -86,5 +86,10 @@
     "editor.codeActionsOnSave": {
       "source.organizeImports": true
     }
-  }
+  },
+  "[clojure]": {
+    "editor.defaultFormatter": "betterthantomorrow.calva",
+    "editor.formatOnSave": true
+  },
+  "editor.formatOnSave": true
 }
