--- a/mac-nix.conf
+++ b/mac-nix.conf
@@ -1,5 +1,5 @@
-# builders = ssh://rex x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel; ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
-builders = ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel; ssh://rex x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
+builders = ssh://rex x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel; ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
+# builders = ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel; ssh://rex x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
 # builders = ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
 # Should they fetch from cache.nixos.org themselves?
 # builders-use-substitutes = true
