--- a/mac-nix.conf
+++ b/mac-nix.conf
@@ -3,3 +3,4 @@ builders = ssh://rex x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,b
 # builders = ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
 # Should they fetch from cache.nixos.org themselves?
 # builders-use-substitutes = true
+experimental-features = nix-command flakes
