--- a/mac-nix.conf
+++ b/mac-nix.conf
@@ -1,9 +1,9 @@
-builders = ssh://rex x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
+builders = ssh://rex x86_64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel; ssh://arm aarch64-linux - 8 2 nixos-test,benchmark,big-parallel
 # ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
 # builders = ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel; ssh://rex x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
 # builders = ssh://local-nixos x86_64-linux,aarch64-linux - 4 2 kvm,nixos-test,benchmark,big-parallel
 # Should they fetch from cache.nixos.org themselves?
-# builders-use-substitutes = true
+builders-use-substitutes = true
 experimental-features = nix-command flakes
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= 
 substituters = https://cache.nixos.org https://hydra.iohk.io
